--- a/package.json
+++ b/package.json
@@ -12,10 +12,6 @@
   "license": "ISC",
   "dependencies": {
     "@babel/runtime": "^7.20.6",
-    "@reduxjs/toolkit": "^1.8.6",
-    "@tanstack/react-table": "^8.7.0",
-    "@types/react-input-mask": "^3.0.2",
-    "@types/react-redux": "^7.1.24",
     "@types/react-transition-group": "^4.4.5",
     "date-fns": "^2.29.3",
     "history": "^5.3.0",
@@ -44,14 +40,10 @@
     "babel-loader": "^8.2.5",
     "babel-plugin-styled-components": "^2.0.7",
     "clean-webpack-plugin": "^4.0.0",
-    "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
-    "mini-css-extract-plugin": "^2.6.1",
-    "style-loader": "^3.3.1",
     "typescript": "^4.8.2",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.10.1",
-    "xmldom": "^0.6.0"
+    "webpack-dev-server": "^4.10.1"
   }
 }
